@@ -1,3 +1,7 @@
+2008-01-18  Luca Ferretti  <elle.uca@libero.it>
+
+	* POTFILES.in: Added programs/gvfs-cat.c
+
 2008-01-17  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
 	* es.po: Updated Spanish translation
